log
Thu 23 Mar 2023 03:24:49 PM UTC: 
 tests:  0|6
total_score: 0/70
12f32c1
Thu 23 Mar 2023 03:33:10 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
134cc4b
Thu 23 Mar 2023 03:36:15 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
532f73d
Thu 23 Mar 2023 03:38:06 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
223df20
Thu 23 Mar 2023 03:39:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0721ac4
Thu 23 Mar 2023 03:41:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:10: error: incompatible types when returning type ‘Node’ but ‘void *’ was expected
   38 |   return *(list->head);
      |          ^~~~~~~~~~~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e7582c5
Thu 23 Mar 2023 03:41:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1972cb3
Thu 23 Mar 2023 03:41:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b8416d8
Thu 23 Mar 2023 03:41:58 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
440da91
Thu 23 Mar 2023 03:43:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:3: error: expected ‘;’ before ‘else’
   39 |   else return list-> head -> data;
      |   ^~~~
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e3935e8
Thu 23 Mar 2023 03:43:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e321c6a
Thu 23 Mar 2023 03:44:34 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
2221c56
Thu 23 Mar 2023 03:47:14 PM UTC: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
d92fbeb
Thu 23 Mar 2023 03:47:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
36b6121
Thu 23 Mar 2023 03:52:13 PM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:67:47: error: expected ‘,’ or ‘;’ before ‘l’
   67 |   Node* nuevo = (Node*)calloc(1, sizeof(Node))l
      |                                               ^
Compilation failed
cde4291
Thu 23 Mar 2023 03:52:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
bb6e917
Thu 23 Mar 2023 03:53:44 PM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
74f7102
Thu 23 Mar 2023 03:54:31 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
56b8e53
Thu 23 Mar 2023 03:55:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
77be851
Thu 23 Mar 2023 03:58:53 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
8f98a43
Thu 23 Mar 2023 04:00:34 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
ae5bcd1
Thu 23 Mar 2023 04:05:13 PM UTC: 
 list.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:91:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   91 |     nuevo->prev = current;
      |                   ^~~~~~~
      |                   popCurrent
list.c:91:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ebeecdd
Thu 23 Mar 2023 04:05:50 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
0189176
Thu 23 Mar 2023 04:06:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4c9c248
Thu 23 Mar 2023 04:07:23 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
a4dd329
Thu 23 Mar 2023 04:20:11 PM UTC: 
 list.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:6: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  112 |   if(current->prev == NULL && current->next == NULL){
      |      ^~~~~~~
      |      popCurrent
list.c:112:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
77b4f46
Thu 23 Mar 2023 04:20:25 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:6: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  112 |   if(current->prev == NULL && current->next == NULL){
      |      ^~~~~~~
      |      popCurrent
list.c:112:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c37b301
Thu 23 Mar 2023 04:21:10 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:37: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  112 |   if(list->current->prev == NULL && current->next == NULL){
      |                                     ^~~~~~~
      |                                     popCurrent
list.c:112:37: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d4c0e3a
Thu 23 Mar 2023 04:21:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
df3693b
